vout: opengl: tighten out of bounds check for base_fetch_locations

While tex_count should be less than 10 so that Textures[X] glsl
variable definition string does not take an extra byte (and overflow),
from deeper inspection we can see that: tex_count > 5 causes invalid
access of uloc.Textures due to its size being PICTURE_PLANE_MAX (5).

Therefore, tighten the bound check to PICTURE_PLANE_MAX instead of
10.

Fixes: #29379 (Coverity 1666210)